# musicSchoolSys

./: README.md  pyproject.toml
escola/escola/: settings.py  urls.py
escola/gestao/: admin.py  forms.py  models.py  urls.py  views.py
escola/gestao/migrations/: 0001_initial.py  0002_professor_data_cadastro.py
escola/gestao/templates/gestao/: base.html  confirmar_delete.html  form_aluno.html  form_professor.html  index.html  lista_alunos.html  lista_professores.html  login.html  novo_aluno.html  novo_professor.html
schoolbackend/scheduling/: models.py  serializers.py  services.py  views.py
schoolbackend/scheduling/migrations/: 0001_initial.py  0002_rename_agendamento_scheduling.py
schoolbackend/schoolbackend/: asgi.py  settings.py  urls.py  wsgi.py
schoolbackend/students/: models.py
schoolbackend/students/migrations/: 0001_initial.py  0002_rename_aluno_student.py
schoolbackend/teachers/: models.py  serializers.py  views.py
schoolbackend/teachers/migrations/: 0001_initial.py  0002_rename_professor_teacher.py
sistema/gestao/: admin.py  forms.py  models.py  urls.py  views.py
sistema/gestao/migrations/: 0001_initial.py  0002_aluno_data_cadastro.py  0003_aula_data_cadastro.py  0004_alter_aluno_professor_alter_aula_professor.py  0005_alter_aluno_professor_alter_aula_professor.py  0006_rename_titulo_aula_instrumento.py  0007_remove_aluno_idade_aluno_data_nascimento_aluno_email_and_more.py  0008_alter_aluno_email_alter_aluno_telefone.py  0009_pagamento.py  0010_alter_aluno_telefone.py
sistema/sistema/: settings.py  urls.py
(+13 files in other folders)
